Fix payment choice spacing, assistante in charge spacing

--- a/assets/scss/pdf/_table.scss
+++ b/assets/scss/pdf/_table.scss
@@ -86,6 +86,15 @@
                 }
             }
         }
+        &.assistant-in-charge {
+            tbody {
+                tr td {
+                    &.td-col {
+                        padding-top: 4px;
+                    }
+                }
+            }
+        }
     }
 }
 
